# inventree-mcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  smoke_test.py
.github/: dependabot.yml
.github/workflows/: docker.yml  publish.yml  release.yml
inventree_mcp/: client.py  config.py  server.py
inventree_mcp/tools/: __init__.py  attachment.py  barcode.py  build_order.py  company.py  label.py  part.py  purchase_order.py  report.py  return_order.py  sales_order.py  stock.py  system.py
tests/: conftest.py  test_barcode.py  test_build_order.py  test_client.py  test_company.py  test_part.py  test_purchase_order.py  test_return_order.py  test_sales_order.py  test_stock.py  test_system.py
