[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inventree-mcp"
version = "0.1.0"
description = "MCP server for InvenTree inventory management"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
inventree-mcp = "inventree_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
