[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inventree-mcp"
version = "1.0.0"
description = "MCP server for InvenTree inventory management"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["mcp", "inventree", "inventory", "llm", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/munin92/inventree-mcp"
Repository = "https://github.com/munin92/inventree-mcp"
Issues = "https://github.com/munin92/inventree-mcp/issues"

[project.scripts]
inventree-mcp = "inventree_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.version]
path = "inventree_mcp/__init__.py"
